--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,9 @@
     <!-- Global Cairo Font CSS -->
     <link rel="stylesheet" href="{% static 'css/global-cairo-font.css' %}">
     
+    <!-- Font Awesome Fix CSS -->
+    <link rel="stylesheet" href="{% static 'css/font-awesome-fix.css' %}">
+    
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
