إضافة حقل تاريخ ميلاد العميل - Add customer birth date field
- إضافة حقل birth_date إلى نموذج العميل
- إضافة الحقل إلى نموذج إنشاء/تعديل العميل
- عرض تاريخ الميلاد في تفاصيل العميل (الشهر واليوم فقط)
- إضافة الحقل إلى لوحة الإدارة مع عرض مخصص
- إنشاء ملف migration للتحديث
- إضافة ملف توثيق للميزة الجديدة

--- a/customers/templates/customers/customer_detail.html
+++ b/customers/templates/customers/customer_detail.html
@@ -160,6 +160,16 @@
                             </td>
                         </tr>
                         {% endif %}
+                        {% if customer.birth_date %}
+                        <tr>
+                            <th>{% trans 'تاريخ الميلاد' %}:</th>
+                            <td>
+                                <i class="fas fa-birthday-cake text-warning"></i> 
+                                {{ customer.birth_date|date:"d/m" }}
+                                <small class="text-muted">({{ customer.birth_date|date:"d" }} {{ customer.birth_date|date:"F" }})</small>
+                            </td>
+                        </tr>
+                        {% endif %}
                         <tr>
                             <th>{% trans 'العنوان' %}:</th>
                             <td>
