--- a/templates/base.html
+++ b/templates/base.html
@@ -156,6 +156,11 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'home' %}"><i class="fas fa-home"></i><span class="nav-text">الرئيسية</span></a>
                     </li>
+                    {% if user.is_authenticated and user.is_staff %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admin_dashboard' %}"><i class="fas fa-chart-line"></i><span class="nav-text">داش بورد الإدارة</span></a>
+                    </li>
+                    {% endif %}
 
                     <!-- الأقسام للمستخدمين المسجلين فقط -->
                     {% if user.is_authenticated %}
