--- a/installations/templates/installations/modification_detail.html
+++ b/installations/templates/installations/modification_detail.html
@@ -67,7 +67,7 @@
                             <table class="table table-borderless">
                                 <tr>
                                     <th>التكلفة المتوقعة:</th>
-                                    <td>{{ modification_request.estimated_cost|floatformat:2 }} جنيه</td>
+                                    <td>{{ modification_request.estimated_cost|currency_format }}</td>
                                 </tr>
                                 <tr>
                                     <th>موافقة العميل:</th>
