--- a/installations/templates/installations/add_receipt_memo.html
+++ b/installations/templates/installations/add_receipt_memo.html
@@ -22,7 +22,7 @@
                             <div class="col-md-6">
                                 <strong>رقم الطلب:</strong> {{ installation.order.order_number }}<br>
                                 <strong>العميل:</strong> {{ installation.order.customer.name }}<br>
-                                <strong>متبقي الحساب:</strong> {{ installation.order.remaining_amount|default:"0" }} جنيه
+                                <strong>متبقي الحساب:</strong> {{ installation.order.remaining_amount|default:"0"|currency_format }}
                             </div>
                             <div class="col-md-6">
                                 <strong>العنوان:</strong> {{ installation.order.customer.address|default:"غير محدد" }}<br>
