--- a/installations/templates/installations/orders_modal_total.html
+++ b/installations/templates/installations/orders_modal_total.html
@@ -62,12 +62,12 @@
                                         {% endif %}
                                     </td>
                                     <td>{{ order.created_at|date:"Y-m-d" }}</td>
-                                    <td>{{ order.total_amount|floatformat:2 }} {{ currency_symbol }}</td>
-                                    <td>{{ order.paid_amount|floatformat:2 }} {{ currency_symbol }}</td>
+                                    <td>{{ order.total_amount|currency_format }}</td>
+                                    <td>{{ order.paid_amount|currency_format }}</td>
                                     <td>
                                         {% if order.paid_amount < order.total_amount %}
                                             <span class="badge badge-danger">
-                                                {{ order.total_amount|add:"-"|add:order.paid_amount|floatformat:2 }} {{ currency_symbol }}
+                                                {{ order.total_amount|add:"-"|add:order.paid_amount|currency_format }}
                                             </span>
                                         {% else %}
                                             <span class="badge badge-success">مكتمل الدفع</span>
